# sar-dsl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run_flow.sh
include/: CMakeLists.txt
include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/Conversion/SARToLinalg/: SARToLinalg.h
include/Dialect/: CMakeLists.txt
include/Dialect/SAR/: CMakeLists.txt
include/Dialect/SAR/IR/: CMakeLists.txt  SAR.td  SARConstraints.td  SARDialect.h  SARDialect.td  SAROps.h  SAROps.td  SARTypes.h  SARTypes.td
include/SAR-c/: Dialects.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/SARToLinalg/: CMakeLists.txt  SARToLinalg.cpp  SARToLinalgPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/SAR/: CMakeLists.txt
lib/Dialect/SAR/IR/: CMakeLists.txt  SARDialect.cpp  SAROps.cpp  SARTypes.cpp
python/: CMakeLists.txt  test_debug.py  test_elem.py  test_fft.py
python/sar/: DialectSAR.cpp  SARPythonBindings.cpp  __init__.py  _ods_common.py  frontend.py
test/: CMakeLists.txt  ir_gen.cpp  ir_test.c  test.cpp  test_compr.py  test_debug.py  test_elem.py  test_fft.py  test_gen_elem.cpp  test_gen_fft.cpp  test_shape_mismatch.cpp
test/MLIR/: test.mlir
test/sar_domain/: test_filter.py
test/test-scalehls-hida/: affine_matmul.mlir
tools/: CMakeLists.txt  sar-opt.cpp
tools/sar-opt/: CMakeLists.txt  sar-opt.cpp
